--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <button class="start">Start</button>
+        <button class="restart">Restart</button>
+        <div class="container">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
