--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <button class="start">Start</button>
         <button class="restart">Restart</button>
         <div class="container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="0"></div>
+            <div id="1"></div>
+            <div id="2"></div>
+            <div id="3"></div>
+            <div id="4"></div>
+            <div id="5"></div>
+            <div id="6"></div>
+            <div id="7"></div>
+            <div id="8"></div>
         </div>
+        <h1 class="winner">Winner is Player 1</h1>
         <script src="script.js"></script>
     </body>
 </html>
