--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <button class="restart">Restart</button>
+        <button class="restart">Start / Restart</button>
         <div class="container">
             <div id="0"></div>
             <div id="1"></div>
@@ -18,7 +18,7 @@
             <div id="7"></div>
             <div id="8"></div>
         </div>
-        <h1 class="winner">Winner is Player 1</h1>
+        <h1 class="message">Winner is Player 1</h1>
         <script src="script.js"></script>
     </body>
 </html>
