--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="7"></div>
             <div id="8"></div>
         </div>
-        <h1 class="message">Winner is Player 1</h1>
+        <h1 class="message">Hidden Message</h1>
         <script src="script.js"></script>
     </body>
 </html>
